Change font to Trebuchet MS, reduce base size, fix image-text alignment

--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -163,6 +163,10 @@
   display: flex;
   gap: 1.2em;
   align-items: flex-start;
+
+  .archive__item-title {
+    margin-top: 0;
+  }
 }
 
 .archive__item-teaser-side {
